[package]
name = "rmcp_reverse_server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
rmcp = { path = "../../../reference/rmcp/crates/rmcp", features = ["server", "transport-streamable-http-server"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
