[package]
name = "rust_process_stdio_child"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rmcp = { path = "../../../reference/rmcp/crates/rmcp", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
